# ros-battery-watchdog

./: CMakeLists.txt  README.md  package.xml
config/: calib.config  watchdog.yaml
firmware/: CMakeLists.txt  calib.h  voltage_monitor.cpp
scripts/firmware/: build_calib_header.sh
scripts/watchdog/: watchdog.py
